--- a/dottmux.conf
+++ b/dottmux.conf
@@ -1,9 +1,19 @@
+#Fix to enable zsh plugins work properly
+#set -g default-command "reattach-to-user-namespace $SHELL"
+#set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+
+#Set TPM and plugins to be used
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @themepack 'powerline/default/orange'
+
 # Enable mouse mode
 set -g mouse on
 
 # Start counting pane and window number at 1
 set -g base-index 1
-setw -g pane-base-index 1
+set -g pane-base-index 1
 
 # Disable automatic renaming
 set-option -wg automatic-rename off
@@ -11,23 +21,15 @@ set-option -wg automatic-rename off
 #Renumber cardinals in windows
 set -g renumber-windows on
 
+#Increase history buffer
+set-option -g history-limit 5000
+
 # Use xclip to copy and paste with the system clipboard
 bind C-c run "tmux save-buffer - | xclip -i -sel clip"
 bind C-v run "tmux set-buffer $(xclip -o -sel clip); tmux paste-buffer"
 
-#Increase history buffer
-set-option -g history-limit 5000
-
 #Split windows more intuitive
 bind | split-window -hc "#{pane_current_path}"
 bind - split-window -vc "#{pane_current_path}"
-
-
-#Set TPM and plugins to be used
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-
-set -g @plugin 'jimeh/tmux-themepack'
-set -g @themepack 'powerline/block/blue'
 
 run '~/.tmux/plugins/tpm/tpm'
