Updated opacity for ghostty

--- a/dotconfig/ghostty/config
+++ b/dotconfig/ghostty/config
@@ -2,7 +2,22 @@ theme = Dracula
 
 font-family = "FiraCode Nerd Font Mono Ret"
 
-background-opacity = 0.85
+background-opacity = 0.95
+
+## Unbind hardcoded physical keys that break in dvorak
+keybind = super+equal=unbind
+keybind = super+plus=unbind
+keybind = super+bracket_left=unbind
+keybind = super+bracket_right=unbind
+keybind = super+shift+bracket_left=unbind
+keybind = super+shift+bracket_right=unbind
+
+## Rebind default actions but with regular unicode points
+keybind = "super+[=goto_split:previous"
+keybind = "super+]=goto_split:next"
+keybind = "super+shift+[=previous_tab"
+keybind = "super+shift+]=next_tab"
+keybind = super++=increase_font_size:1
 
 keybind = f11=toggle_fullscreen
 keybind = f12=toggle_window_decorations
